samples/_failures_safe/1761554159_2e0bff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_668fb910.c: In function ‘main’:
./samples/SAFE/__tmp_668fb910.c:151:5: error: expected identifier or ‘(’ at end of input
  151 |     for (int
      |     ^~~
./samples/SAFE/__tmp_668fb910.c:151:5: error: expected declaration or statement at end of input
